# matlab-proxy

./: .coveragerc  .gitignore  Advanced-Usage.md  MANIFEST.in  MATLAB-Licensing-Info.md  README.md  SECURITY.md  bla.py  conftest.py  hatch_build.py  pyproject.toml  pytest.ini  setup.py
.devcontainer/: devcontainer.json
.devcontainer/with-matlab/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/actions/build_and_publish_pypi/: action.yml
.github/actions/generate-code-coverage/: action.yml
.github/workflows/: release-to-pypi.yml  release.yml  run-integration-tests.yml  run-tests-feature.yml  run-tests-main.yml  run-tests.yml  run-unit-tests.yml
anaconda/: parse_meta_file.py
examples/: Dockerfile  Dockerfile.upgrade.matlab-proxy  README.md
gui/: .eslintrc.json  README.md  index.html  package-lock.json  package.json  vite.config.js
gui/public/: authorization.html  index.html  signin.css  token.html
gui/src/: constants.js  index.css  index.js  serviceWorker.js  setupTests.js
gui/src/actionCreators/: actionCreators.spec.js  index.js
gui/src/actions/: index.js
gui/src/reducers/: index.js  reducers.spec.js
gui/src/selectors/: index.js  selectors.spec.js
install_guides/wsl2/: README.md
matlab_proxy/: __init__.py  app.py  app_state.py  constants.py  default_configuration.py  devel.py  mwi_embedded_connector.py  mwi_environment_variables.py  settings.py
matlab_proxy/matlab/: evaluateUserMatlabCode.m  startup.m
matlab_proxy/util/: __init__.py  cookie_jar.py  event_loop.py  list_servers.py  mw.py  mwi_custom_http_headers.py  mwi_exceptions.py  mwi_logger.py  mwi_validators.py  system.py  windows.py
matlab_proxy/util/mwi/: __init__.py  custom_http_headers.py  download.py  logger.py  (+5 more)
matlab_proxy_manager/: README.md  __init__.py
matlab_proxy_manager/lib/: README.md  api.py
matlab_proxy_manager/storage/: README.md  file_repository.py  interface.py  server.py
matlab_proxy_manager/utils/: auth.py  constants.py  decorators.py  environment_variables.py  exceptions.py  helpers.py  logger.py
matlab_proxy_manager/web/: README.md  app.py  monitor.py  watcher.py
tests/: README.md  __init__.py  conftest.py  logging_util.py  test_app.py  test_constants.py  test_ddux.py  test_devel.py  test_non_dev_mode.py  test_settings.py
tests/integration/: integration_tests_utils.py  pytest.ini
tests/matlab-tests/: TestEvaluateUserMatlabCodeScript.m
tests/unit/: conftest.py  pytest.ini  test_app.py  test_app_state.py  test_constants.py  test_ddux.py  test_devel.py  test_non_dev_mode.py  test_settings.py
tests/util/: __init__.py  inf_loop.py  test_mw.py  test_mwi_custom_http_headers.py  test_mwi_logger.py  test_mwi_validators.py  test_util.py
tests/utils/: __init__.py
troubleshooting/: README.md  troubleshooting.py
(+106 files in other folders)
